# pyrsm

./: .gitignore  README.md  justfile  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
examples/: README.md
examples/basics/: README.md  basics-compare-means.ipynb  basics-compare-props.ipynb  basics-correlation.ipynb  basics-cross-tabs.ipynb  basics-goodness.ipynb  basics-probability-calculator.ipynb  basics-single-mean.ipynb  basics-single-proportion.ipynb
examples/data/: README.md  convert_parquet_categoricals.py  load-example-data.ipynb
examples/data/basics/: __init__.py  consider.parquet  demand_uk.parquet  newspaper.parquet  salary.parquet
examples/data/data/: avengers.parquet  diamonds.parquet  publishers.parquet  superheroes.parquet  test_data.xls  test_data.xlsx
examples/data/design/: rndnames.parquet
examples/data/model/: catalog.parquet  direct_marketing.parquet  dvd.parquet  houseprices.parquet  ideal.parquet  ketchup.parquet  ratings.parquet  titanic.parquet
examples/data/multivariate/: carpet.parquet  city.parquet  (+8 more)
examples/eda/: README.md  eda-combine.ipynb  eda-distr.ipynb  eda-explore.ipynb  eda-pivot.ipynb  eda-unpivot.ipynb  eda-visualize.ipynb
examples/model/: README.md  model-logistic-regression.ipynb  model-mlp-classification.ipynb  model-mlp-regression.ipynb  model-pdp-plots.ipynb  model-rforest-classification.ipynb  model-rforest-regression.ipynb  model-xgboost-classification.ipynb  model-xgboost-regression.ipynb
examples/multivariate/: multivariate-factor-analysis.ipynb
examples/state/: save-load-state.ipynb
pyrsm/: __init__.py  bins.py  plot_utils.py  stats.py  utils.py
pyrsm/basics/: __init__.py  central_limit_theorem.py  compare_means.py  compare_props.py  correlation.py  cross_tabs.py  display_utils.py  goodness.py  plotting_utils.py  probability_calculator.py  single_mean.py  single_prop.py
pyrsm/design/: sample_size.py
pyrsm/eda/: __init__.py  combine.py  distr.py  explore.py  pivot.py  unpivot.py  visualize.py
pyrsm/model/: __init__.py  logistic.py  mlp.py  model.py  perf.py  regress.py  rforest.py  visualize.py  xgboost.py
pyrsm/multivariate/: __init__.py
scripts/: run_notebooks.py
tests/: conftest.py  test_basics.py  test_categorical_handling.py  test_central_limit_theorem.py  test_compare_means.py  test_compare_props.py  test_correlation_ext.py  test_cross_tabs.py  test_eda.py  test_excel_loading.py  test_goodness.py  test_import_performance.py  test_logistic.py  test_mlp.py  test_mlp_scaling.py  test_model_utils.py  test_pdp.py  test_perf.py  test_plot_composition.py  test_plot_migration.py  test_prob_calc.py  test_prob_calc_imports.py  test_regress.py  test_regression.py  test_rforest.py  test_single_prop.py  test_smoke.py  test_stats.py  test_utils.py  test_xgb.py
(+12 files in other folders)
